--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -593,6 +593,7 @@ jobs:
           r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
           r2-bucket: desktop-distro
           source-dir: desktop-package/${{ env.PublishTempFolder}}
+          destination-dir: ./
       - name: Publish distribution version
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
